--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
 
-spring.datasource.url=jdbc:sqlserver://sampleservername.database.windows.net:1433;database=sampledatabase;user=sqladmin@sampleservername;password={Abc!12345678};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=sqladmin
-spring.datasource.password=Abc!12345678
+spring.datasource.url=jdbc:sqlserver://.database.windows.net:1433;database=sampledatabase;user=sqladmin@sampleservername;password={};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
